# ymmapi-rs

./: Cargo.toml  Rocket.toml  config.toml
src/: config.rs  main.rs  webserver.rs
static/: index.html
