[package]
name = "ymmapi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lastfm = "0.10.0"
random = "0.14.0"
reqwest = "0.12.5"
rocket = "0.5.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
yandex-music = "0.2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = 0
